syntax = "proto3";

option csharp_namespace = "GrpcServiceStaff";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
	rpc DoWorkerAction (WorkerAction) returns (WorkerMessage);
}

message EmptyMessage
{
}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	int32 Id = 1;
	string LastName = 2;
	string FirstName = 3;
	string MiddleName = 4;
	int64 Birthday = 5;
	Sex Sex = 6;
	bool HaveChildren = 7;
}

//Пол
enum Sex {
	Sex_Default = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	Action_Default = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}